--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "type": "git",
     "url": "https://github.com/small-tech/svelte-nano-donate.git"
   },
-  "devDependencies": {
+  "dependencies": {
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "qrious": "^4.0.2",
