--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@small-tech/svelte-nano-donate",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A donation component for the Nano cryptocurrency built using Svelte (which you can use in non-Svelte projects also).",
   "contributors": [
     {
@@ -45,12 +45,14 @@
     "type": "git",
     "url": "https://github.com/small-tech/svelte-nano-donate.git"
   },
-  "dependencies": {
+  "devDependencies": {
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
-    "qrious": "^4.0.2",
     "rollup": "^2.0.0",
     "rollup-plugin-svelte": "^6.0.0",
     "svelte": "^3.0.0"
+  },
+  "dependencies": {
+    "qrious": "^4.0.2"
   }
 }
